--- a/Echoes/Monsters.plist
+++ b/Echoes/Monsters.plist
@@ -799,7 +799,7 @@
 				<key>name</key>
 				<string>Drops</string>
 				<key>description</key>
-				<string>Gargoyle Helm, Gargoyle Tail Axe If Tail Cut</string>
+				<string>Gargoyle Helm, Basement Key, Gargoyle Tail Axe If Tail Cut</string>
 			</dict>
 		</array>
 	</dict>
